--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     
                 </p>
             </div>
-            <div style="width:62%;height: 430px; margin-left: 5%; margin-right:5%; margin-top:7%;">
-            <img src="https://cdn.nba.com/manage/2020/10/AS20-Starters-T1-FrostyChiTowngraphic-784x441.jpg" style="border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px">
+            <div style="width:80%;height: 300px; margin-left: 5%; margin-right:5%; margin-top:7%;">
+                <img src="https://cdn.nba.com/manage/2020/10/AS20-Starters-T1-FrostyChiTowngraphic-784x441.jpg" style="border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px; width:90%">
                 <div id="Map_vega">
                     <script type="text/javascript">
                         var spec1 = "js/Map_vega.vg.json";
