--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
                     </div>
                 </div>
             </div>
+            <!--row 1.5-->
+            <!--Map-->
+            <div
+                style="width:70%; height: 500px;margin-left: 15%; display:flex;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
+
+            </div>
             <!--row 2-->
             <div
                 style="width:70%; height: 500px;margin-left: 15%; margin-top:1%; display:flex; background-color:white;border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px">
