--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                 </div>
                 <div style="width:80%;height: 300px; margin-left: 5%; margin-right:5%; margin-top:7%;">
                     <img src="https://cdn.nba.com/manage/2020/10/AS20-Starters-T1-FrostyChiTowngraphic-784x441.jpg"
-                        style="border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px; width:90%">
+                        style="border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px; width:80%">
                 </div>
             </div>
             <!--row 1.5-->
             <!--Map-->
             <div
-                style="width:70%; height: 500px;margin-left: 15%; display:flex;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
+                style="width:70%; height: 500px;margin-left: 15%; margin-top: 1%;display:flex;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
                 <div id="Map_vega">
                     <script type="text/javascript">
                         var spec1 = "js/Map_vega.vg.json";
