--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
                     </div>
                 </div>
             </div>
+            <!--row 2.5-->
+            <div style="width:70%; height: 500px;margin-left: 15%; margin-top: 1%;display:flex;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
+
+            </div>
             <!--row 3-->
             <div
                 style="width:70%; height: 500px;margin-left: 15%; margin-top:1%; display:flex; background-color: White;border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px">
