--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                         }).catch(console.error);
                     </script>
                 </div>
+                <div>
+                    <img src="https://prod.chaseyoursport.com/blogImage/0.037280981170299876.jpeg" alt="position">
+                </div>
+                <div>
+
+                </div>
             </div>
             <!--row 3-->
             <div
