--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                 </div>
             </div>
             <!--row 2.5-->
-            <div style="width:70%; height: 500px;margin-left: 15%; margin-top: 1%;display:flex;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
+            <div
+                style="width:70%; height: 500px;margin-left: 15%; margin-top: 1%;display:flex;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
                 <div id="boxandwhisker_vega">
                     <script type="text/javascript">
                         var spec2 = "js/boxandwhisker_vega.vg.json";
