--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <!--row 2.5-->
             <div
                 style="width:70%; height: 500px;margin-left: 15%; margin-top: 1%;display:flex;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
-                <div id="boxandwhisker_vega">
+                <div id="boxandwhisker_vega", style="margin-top:15%; margin-left:1%">
                     <script type="text/javascript">
                         var spec2 = "js/boxandwhisker_vega.vg.json";
                         vegaEmbed('#boxandwhisker_vega', spec2).then(function (result) {
