--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         }).catch(console.error);
                     </script>
                 </div>
-                <div>
+                <div style="width: 33%; margin-left: 5%,">
                     <img src="https://prod.chaseyoursport.com/blogImage/0.037280981170299876.jpeg" alt="position">
                 </div>
                 <div>
