--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div style="width: 33%; margin-left: 5%,">
                     <img src="https://prod.chaseyoursport.com/blogImage/0.037280981170299876.jpeg" alt="position">
                 </div>
-                <div>
+                <div style="width: 33%; margin-left: 5%,">
 
                 </div>
             </div>
