--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </script>
                 </div>
                 <div style="width: 33%; margin-left: 5%;">
-                    <img src="https://prod.chaseyoursport.com/blogImage/0.037280981170299876.jpeg" alt="position">
+                    <img src="https://prod.chaseyoursport.com/blogImage/0.037280981170299876.jpeg" alt="position" style="width: 90%;margin-top:5%;">
                 </div>
                 <div style="width: 33%; margin-left: 5%,">
 
