--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         }).catch(console.error);
                     </script>
                 </div>
-                <div style="width: 33%; margin-left: 5%;">
+                <div style="width: 33%; margin-left: 5%;margin-top: 1%;">
                     <img src="https://prod.chaseyoursport.com/blogImage/0.037280981170299876.jpeg" alt="position" style="width: 90%;margin-top:5%; rotate: left;">
                 </div>
                 <div style="width: 33%; margin-left: 5%,">
