--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!--row 1.5-->
             <!--Map-->
             <div
-                style="width:70%; height: 1000px;margin-left: 15%; margin-top: 1%;display:flex;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
+                style="width:70%; height: 1000px;margin-left: 15%; margin-top: 1%;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
                 <div id="Map_vega" style="margin-top: 19%;margin-left: 5%;">
                     <script type="text/javascript">
                         var spec1 = "js/Map_vega.vg.json";
@@ -67,6 +67,16 @@
                             // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
                         }).catch(console.error);
                     </script>
+                </div>
+                <div>
+                    <!--map-->
+                    <div>
+
+                    </div>
+                    <!
+                    <div>
+
+                    </div>
                 </div>
             </div>
             <!--row 2-->
