--- a/index.html
+++ b/index.html
@@ -60,13 +60,39 @@
             <!--Map-->
             <div
                 style="width:70%; height: 750px;margin-left: 15%; margin-top: 1%;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
-                <div id="Map_vega" style="margin-top: 1%;margin-left: 5%;">
-                    <script type="text/javascript">
-                        var spec1 = "js/Map_vega.vg.json";
-                        vegaEmbed('#Map_vega', spec1).then(function (result) {
-                            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-                        }).catch(console.error);
-                    </script>
+                <div>
+                    <div id="Map_vega" style="margin-top: 1%;margin-left: 5%;">
+                        <script type="text/javascript">
+                            var spec1 = "js/Map_vega.vg.json";
+                            vegaEmbed('#Map_vega', spec1).then(function (result) {
+                                // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+                            }).catch(console.error);
+                        </script>
+                    </div>
+                </div>
+                <div style="display: flex; margin-left: 5%;">
+                    <div style="width:50%">
+                        <p>
+                            Barbara had been waiting at the table for twenty minutes.
+                            it had been twenty long and excruciating minutes.
+                            David had promised that he would be on time today.
+                            He never was, but he had promised this one time.
+                            She had made him repeat the promise multiple times over the last week until she'd believed his
+                            promise.
+                            Now she was paying the price.
+                        </p>
+                    </div>
+                    <div style="width:50%">
+                        <p>
+                            Barbara had been waiting at the table for twenty minutes.
+                            it had been twenty long and excruciating minutes.
+                            David had promised that he would be on time today.
+                            He never was, but he had promised this one time.
+                            She had made him repeat the promise multiple times over the last week until she'd believed his
+                            promise.
+                            Now she was paying the price.
+                        </p>
+                    </div>
                 </div>
             </div>
             <!--row 2-->
