--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!--Map-->
             <div
                 style="width:70%; height: 750px;margin-left: 15%;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
-                <div>
+                <div style="height: 500px;">
                     <div id="Map_vega" style="margin-top: 1%;margin-left: 5%;">
                         <script type="text/javascript">
                             var spec1 = "js/Map_vega.vg.json";
@@ -70,7 +70,7 @@
                         </script>
                     </div>
                 </div>
-                <div style="display: flex; margin-left: 5%;">
+                <div style="display: flex; margin-left: 5%; height: 250px;">
                     <div style="width:50%">
                         <p>
                             Barbara had been waiting at the table for twenty minutes.
