--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div style="display: flex; margin-left: 5%; height: 250px;">
-                    <div style="width:50%">
+                    <div style="width:48%">
                         <p>
                             Barbara had been waiting at the table for twenty minutes.
                             it had been twenty long and excruciating minutes.
@@ -82,7 +82,7 @@
                             Now she was paying the price.
                         </p>
                     </div>
-                    <div style="width:50%">
+                    <div style="width:48%; margin-left: 2%;">
                         <p>
                             Barbara had been waiting at the table for twenty minutes.
                             it had been twenty long and excruciating minutes.
