--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </script>
                     </div>
                 </div>
-                <div style="display: flex; margin-left: 5%; height: 150px;">
+                <div style="display: flex; margin-left: 5%; margin-top:-1%;height: 150px;">
                     <div style="width:48%">
                         <p>
                             Barbara had been waiting at the table for twenty minutes.
