--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div
                 style="width:70%; height: 650px;margin-left: 15%; margin-top: 1%; background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
                 <div style="height: 500px;">
-                    <div id="Map_vega" style="margin-top: 1%;margin-left: 5%;">
+                    <div id="Map_vega" style="margin-top: 1%;margin-left: 5%;margin-top:-5%;">
                         <script type="text/javascript">
                             var spec1 = "js/Map_vega.vg.json";
                             vegaEmbed('#Map_vega', spec1).then(function (result) {
@@ -70,7 +70,7 @@
                         </script>
                     </div>
                 </div>
-                <div style="display: flex; margin-left: 5%; margin-top:-5%;height: 150px;">
+                <div style="display: flex; margin-left: 5%; height: 150px;">
                     <div style="width:48%">
                         <p>
                             Barbara had been waiting at the table for twenty minutes.
