--- a/index.html
+++ b/index.html
@@ -34,20 +34,7 @@
                     </h1>
                     <h2>This is a heading lol</h2>
                     <p>
-                        Barbara had been waiting at the table for twenty minutes.
-                        it had been twenty long and excruciating minutes.
-                        David had promised that he would be on time today.
-                        He never was, but he had promised this one time.
-                        She had made him repeat the promise multiple times over the last week until she'd believed his
-                        promise.
-                        Now she was paying the price.
-                        Barbara had been waiting at the table for twenty minutes.
-                        it had been twenty long and excruciating minutes.
-                        David had promised that he would be on time today.
-                        He never was, but he had promised this one time.
-                        She had made him repeat the promise multiple times over the last week until she'd believed his
-                        promise.
-                        Now she was paying the price.
+                        Coming up to the 2022 NBA all-star game, discussions on the all-time NBA greats has re-arsine, with discussions on the best NBA teams, players, and most important position being hotly debated. These questions on the greats requires the analysis of all areas of play, both offensively and defensively and as such, to give insight into the greatest of the last 2 decades, the states of average points, Average goals, Average 3 and 2 pointers, average free throws and average fouls were considered. 
 
                     </p>
                 </div>
