--- a/index.html
+++ b/index.html
@@ -34,7 +34,20 @@
                     </h1>
                     <h2>This is a heading lol</h2>
                     <p>
-                        Coming up to the 2022 NBA all-star game, discussions on the all-time NBA greats has re-arsine, with discussions on the best NBA teams, players, and most important position being hotly debated. These questions on the greats requires the analysis of all areas of play, both offensively and defensively and as such, to give insight into the greatest of the last 2 decades, the states of average points, Average goals, Average 3 and 2 pointers, average free throws and average fouls were considered. 
+                        Coming up to the 2022 NBA all-star game, 
+                        discussions on the all-time NBA greats has 
+                        re-arsine, with discussions on the best NBA 
+                        teams, players, and most important 
+                        position being hotly debated. To give insight into 
+                        these discussions, the factors of player state, 
+                        position, age and a player side-by-side comparison were investigated. These questions on the 
+                        greats requires the analysis of all areas of play, both 
+                        offensively and defensively and as such, to 
+                        give insight into the greatest of the last 2 
+                        decades, the states of average points, 
+                        average goals, average 3 and 2 pointers, 
+                        average free throws and average fouls 
+                        were considered. 
 
                     </p>
                 </div>
