--- a/index.html
+++ b/index.html
@@ -73,14 +73,7 @@
                 <div style="display: flex; margin-left: 5%; height: 150px;">
                     <div style="width:48%">
                         <p>
-                            Barbara had been waiting at the table for twenty minutes.
-                            it had been twenty long and excruciating minutes.
-                            David had promised that he would be on time today.
-                            He never was, but he had promised this one time.
-                            She had made him repeat the promise multiple times over the last week until she'd believed
-                            his
-                            promise.
-                            Now she was paying the price.
+                            When comparing which state has produces the best NBA talent over the last 2 decades, adjusting for the number of teams in the state, Washington can be seen to perform far better across all the statistics considered, with Washington players scoring on average 755 points per round, compared to Massachusetts, the state with the next highest average points per round, of 629 points.
                         </p>
                     </div>
                     <div style="width:48%; margin-left: 2%;">
