--- a/index.html
+++ b/index.html
@@ -73,19 +73,12 @@
                 <div style="display: flex; margin-left: 5%; height: 150px;">
                     <div style="width:48%">
                         <p>
-                            When comparing which state has produces the best NBA talent over the last 2 decades, adjusting for the number of teams in the state, Washington can be seen to perform far better across all the statistics considered, with Washington players scoring on average 755 points per round, compared to Massachusetts, the state with the next highest average points per round, of 629 points.
+                            When comparing which state has produces the best NBA talent over the last 2 decades, adjusting for the number of teams in the state, Washington can be seen to perform far better across all the statistics considered, with Washington players scoring on average 755 points per round, compared to Massachusetts, the state with the next highest average points per round, of 629 points.    
                         </p>
                     </div>
                     <div style="width:48%; margin-left: 2%;">
                         <p>
-                            Barbara had been waiting at the table for twenty minutes.
-                            it had been twenty long and excruciating minutes.
-                            David had promised that he would be on time today.
-                            He never was, but he had promised this one time.
-                            She had made him repeat the promise multiple times over the last week until she'd believed
-                            his
-                            promise.
-                            Now she was paying the price.
+                            On the contrary, North Carolina can be seen to be lacking across all statistics, with players from this state scoring an average of 68 goals per round, compared to the next worst of Tennessee of 106 goals per round. From this, Washington can be said to have been the greatest NBA team of the last 2 decades, with respect to player quality
                         </p>
                     </div>
                 </div>
