--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div
                 style="width:70%; height: 500px;margin-left: 15%; margin-top:1%; display:flex; background-color:white;border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px">
                 <div style="width:25%;height: 500px; margin-left: 5%;">
-                    <h2>this is a heading</h2>
+                    <h2>Impact of Age</h2>
                     <p>
                         In comparing the players by age across all the statistics considered, across all years, a higher density of younger players can be performing better than older players, as to be expected as players age. Kobe Bryant is an exception of this, with an average point per game of 27 at the age of 34 in 2012, while the in 2003, during his prime age at 25, his average points per game was below this a 24. A similar trend can be seen with another all-star player in LeBron James, with his average points per game within a range of 25 and 31 points between 2008 and 2021, where his maximum of 31 points per game was scored at the age of 37. As shown, age can dictate an all-stars performance, with younger players more densely populating the list, with on average, a higher score in all states with some exceptions with particularly great players
 
@@ -121,7 +121,7 @@
                         style="width: 90%;margin-top:5%;border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px; width:90%">
                 </div>
                 <div style="width: 30%; margin-left: 1%; margin-top: 1%;">
-                    <h2>this is a heading</h2>
+                    <h2>The Greatest Position?</h2>
                     <p>
                         Barbara had been waiting at the table for twenty minutes.
                         it had been twenty long and excruciating minutes.
