--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div
                 style="width:70%; height: 500px;margin-left: 15%; display:flex;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
                 <div style="width:35%;height: 500px; margin-left: 5%;">
-                    <h1 style="text-align: left; padding-left:5%; font-size: 100; font-weight: bold;">NBA Statistics
+                    <h1 style="text-align: left; padding-left:5%; font-size: 100; font-weight: bold;">The NBA Greats
                     </h1>
-                    <h2>This is a heading lol</h2>
+                    <h2>what are the greats of the NBA</h2>
                     <p>
                         Coming up to the 2022 NBA all-star game, 
                         discussions on the all-time NBA greats has 
@@ -123,20 +123,7 @@
                 <div style="width: 30%; margin-left: 1%; margin-top: 1%;">
                     <h2>The Greatest Position?</h2>
                     <p>
-                        Barbara had been waiting at the table for twenty minutes.
-                        it had been twenty long and excruciating minutes.
-                        David had promised that he would be on time today.
-                        He never was, but he had promised this one time.
-                        She had made him repeat the promise multiple times over the last week until she'd believed his
-                        promise.
-                        Now she was paying the price.
-                        Barbara had been waiting at the table for twenty minutes.
-                        it had been twenty long and excruciating minutes.
-                        David had promised that he would be on time today.
-                        He never was, but he had promised this one time.
-                        She had made him repeat the promise multiple times over the last week until she'd believed his
-                        promise.
-                        Now she was paying the price.
+                        From comparing the positions across both states, the middle 50% of all shooting guards outperformed all other positions across both stats. This is not the entire story however, as looking at the extremes, both point guards and center outperform shooting guards. while this is true, these positions have a much greater spread in performance, lending to the notion that these extremes are outliers. As can be seen in the figure, the positions closer to net generally score more than other positions, with the median points per round of small forwards and power forwards being 234 and 22 points respectively, with only shooting guards competing with an average point per game of 24. Thus, an argument can be made that the greatest players over the last 2 decades can be seen to be shooting guards
 
                     </p>
                 </div>
