--- a/index.html
+++ b/index.html
@@ -142,21 +142,9 @@
                     </div>
                 </div>
                 <div style="width:18%;height: 500px; margin-left: 5%;">
-                    <h2>this is a heading</h2>
+                    <h2>The Greatest Players?</h2>
                     <p>
-                        Barbara had been waiting at the table for twenty minutes.
-                        it had been twenty long and excruciating minutes.
-                        David had promised that he would be on time today.
-                        He never was, but he had promised this one time.
-                        She had made him repeat the promise multiple times over the last week until she'd believed his
-                        promise.
-                        Now she was paying the price.
-                        Barbara had been waiting at the table for twenty minutes.
-                        it had been twenty long and excruciating minutes.
-                        David had promised that he would be on time today.
-                        He never was, but he had promised this one time.
-                        She had made him repeat the promise multiple times over the last week until she'd believed his
-                        promise.
+                        Finally comparing players over the years across different stats, many players can be seen to be the greatest in some regard. <span style="font-weight: bold;">James Harden currently holds the highest average points per game in 2018 of 36</span> possibly making him the best scorer. Moreover, James Harden holds the greatest average free throws made per game of 10 free throws in 2019. While defensively, Ben Wallace has the most blocks per game of in 2002 of 3.1 blocks per game, making him a defensive great. On the other hand, being the greatest in a stat does mean they are the greatest all round player, with players such as Kobe Bryant and LeBron James boasting very impressive average stats per game over a period of over 10 years, giving these two players an argument for being the greatest of all time
 
                     </p>
                 </div>
