--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                 <div style="display: flex; margin-left: 5%; height: 150px;">
                     <div style="width:48%">
                         <p>
-                            When comparing which state has produces the best NBA talent over the last 2 decades, adjusting for the number of teams in the state, Washington can be seen to perform far better across all the statistics considered, with Washington players scoring on average 755 points per round, compared to Massachusetts, the state with the next highest average points per round, of 629 points.    
+                            When comparing which state has produces the best NBA talent over the last 2 decades, adjusting for the number of teams in the state, <span style="font-weight: bold;">Washington can be seen to perform far better across all the statistics considered,</span> with Washington players scoring on average 755 points per round, compared to Massachusetts, the state with the next highest average points per round, of 629 points.    
                         </p>
                     </div>
                     <div style="width:48%; margin-left: 2%;">
                         <p>
-                            On the contrary, North Carolina can be seen to be lacking across all statistics, with players from this state scoring an average of 68 goals per round, compared to the next worst of Tennessee of 106 goals per round. From this, Washington can be said to have been the greatest NBA team of the last 2 decades, with respect to player quality
+                            On the contrary, <span style="font-weight: bold;">North Carolina</span> can be seen to be lacking across all statistics, with players from this state <span style="font-weight: bold;">scoring an average of 68 goals per round,</span> compared to the next worst of Tennessee of 106 goals per round. From this, Washington can be said to have been the greatest NBA team of the last 2 decades, with respect to player quality
                         </p>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                 <div style="width:25%;height: 500px; margin-left: 5%;">
                     <h2>Impact of Age</h2>
                     <p>
-                        In comparing the players by age across all the statistics considered, across all years, a higher density of younger players can be performing better than older players, as to be expected as players age. Kobe Bryant is an exception of this, with an average point per game of 27 at the age of 34 in 2012, while the in 2003, during his prime age at 25, his average points per game was below this a 24. A similar trend can be seen with another all-star player in LeBron James, with his average points per game within a range of 25 and 31 points between 2008 and 2021, where his maximum of 31 points per game was scored at the age of 37. As shown, age can dictate an all-stars performance, with younger players more densely populating the list, with on average, a higher score in all states with some exceptions with particularly great players
+                        In comparing the players by age across all the statistics considered, across all years, <span style="font-weight:bold">a higher density of younger players can be performing better than older players</span>, as to be expected as players age. Kobe Bryant is an exception of this, with an average point per game of 27 at the age of 34 in 2012, while the in 2003, during his prime age at 25, his average points per game was below this a 24. A similar trend can be seen with another all-star player in LeBron James, with his <span style="font-weight: bold;">average points per game within a range of 25 and 31 points between 2008 and 2021,</span> where his maximum of 31 points per game was scored at the age of 37. As shown, age can dictate an all-stars performance, with younger players more densely populating the list, with on average, a higher score in all states with some exceptions with particularly great players
 
                     </p>
                 </div>
@@ -123,7 +123,7 @@
                 <div style="width: 30%; margin-left: 1%; margin-top: 1%;">
                     <h2>The Greatest Position?</h2>
                     <p>
-                        From comparing the positions across both states, the middle 50% of all shooting guards outperformed all other positions across both stats. This is not the entire story however, as looking at the extremes, both point guards and center outperform shooting guards. while this is true, these positions have a much greater spread in performance, lending to the notion that these extremes are outliers. As can be seen in the figure, the positions closer to net generally score more than other positions, with the median points per round of small forwards and power forwards being 234 and 22 points respectively, with only shooting guards competing with an average point per game of 24. Thus, an argument can be made that the greatest players over the last 2 decades can be seen to be shooting guards
+                        From comparing the positions across both states, <span style="font-weight: bold;">the middle 50% of all shooting guards outperformed all other positions across both stats.</span> This is not the entire story however, as looking at the extremes, both point guards and center outperform shooting guards. while this is true, these positions have a much greater spread in performance, lending to the notion that these extremes are outliers. As can be seen in the figure, the positions closer to net generally score more than other positions, with the <span style="font-weight:bold;">median points per round of small forwards and power forwards being 23.4 and 22 points respectively,</span> with only shooting guards competing with an average point per game of 24. Thus, an argument can be made that the greatest players over the last 2 decades can be seen to be shooting guards
 
                     </p>
                 </div>
@@ -144,7 +144,7 @@
                 <div style="width:18%;height: 500px; margin-left: 5%;">
                     <h2>The Greatest Players?</h2>
                     <p>
-                        Finally comparing players over the years across different stats, many players can be seen to be the greatest in some regard. <span style="font-weight: bold;">James Harden currently holds the highest average points per game in 2018 of 36</span> possibly making him the best scorer. Moreover, James Harden holds the greatest average free throws made per game of 10 free throws in 2019. While defensively, Ben Wallace has the most blocks per game of in 2002 of 3.1 blocks per game, making him a defensive great. On the other hand, being the greatest in a stat does mean they are the greatest all round player, with players such as Kobe Bryant and LeBron James boasting very impressive average stats per game over a period of over 10 years, giving these two players an argument for being the greatest of all time
+                        Finally comparing players over the years across different stats, many players can be seen to be the greatest in some regard. <span style="font-weight: bold;">James Harden currently holds the highest average points per game in 2018 of 36</span> possibly making him the best scorer. Moreover, James Harden holds the greatest average free throws made per game of 10 free throws in 2019. While defensively, <span style="font-weight: bold;">Ben Wallace has the most blocks per game of in 2002 of 3.1 blocks per game,</span> making him a defensive great. On the other hand, being the greatest in a stat does mean they are the greatest all round player, with players such as Kobe Bryant and LeBron James boasting very impressive average stats per game over a period of over 10 years, giving these two players an argument for being the greatest of all time
 
                     </p>
                 </div>
