--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
                 <div style="width: 30%; margin-left: 1%; margin-top: 1%;">
                     <h2>The Greatest Position?</h2>
-                    <p>
+                    <p style="margin-top: -1%;">
                         From comparing the positions across both states, <span style="font-weight: bold;">the middle 50% of all shooting guards outperformed all other positions across both stats.</span> This is not the entire story however, as looking at the extremes, both point guards and center outperform shooting guards. while this is true, these positions have a much greater spread in performance, lending to the notion that these extremes are outliers. As can be seen in the figure, the positions closer to net generally score more than other positions, with the <span style="font-weight:bold;">median points per round of small forwards and power forwards being 23.4 and 22 points respectively,</span> with only shooting guards competing with an average point per game of 24. Thus, an argument can be made that the greatest players over the last 2 decades can be seen to be shooting guards
 
                     </p>
