--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div style="width:35%;height: 500px; margin-left: 5%;">
                     <h1 style="text-align: left; padding-left:5%; font-size: 100; font-weight: bold;">The NBA Greats
                     </h1>
-                    <h2>what are the greats of the NBA</h2>
+                    <h2>What are the Greats of the NBA</h2>
                     <p>
                         Coming up to the 2022 NBA all-star game, 
                         discussions on the all-time NBA greats has 
